force-app/main/default/objects/Product2/fields/Active_BAO__c.field-meta.xml
<CustomField>
    <fullName>Active_BAO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether this product shows up in the account opening for Business Account Opening</description>
    <label>Active (BAO)</label>
    <type>Checkbox</type>
</CustomField>