force-app/main/default/objects/Product2/fields/Active_CAO__c.field-meta.xml
<CustomField>
    <fullName>Active_CAO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether this product shows up in the account opening for Consumer Account Opening</description>
    <label>Active (CAO)</label>
    <type>Checkbox</type>
</CustomField>