force-app/main/default/objects/Product2/fields/AvailableChannel__c.field-meta.xml
<CustomField>
    <fullName>AvailableChannel__c</fullName>
    <description>Determines which channel the Product is available for Account Opening</description>
    <label>Available Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>