force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Used in Account Opening process</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkings</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Certificates</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>