force-app/main/default/objects/Product2/fields/COCC_Major__c.field-meta.xml
<CustomField>
    <fullName>COCC_Major__c</fullName>
    <label>COCC Major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COCC_Majors</valueSetName>
    </valueSet>
</CustomField>