force-app/main/default/objects/Product2/fields/MinorCode__c.field-meta.xml
<CustomField>
    <fullName>MinorCode__c</fullName>
    <description>MinorCode of Product from Core</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MinorCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>