force-app/main/default/objects/Product2/fields/Parent_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Product Required</label>
    <type>Checkbox</type>
</CustomField>